<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@drawable/muted_bg"
    tools:context=".battleIndex.BattleIndexActivity">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="2"
        android:paddingTop="10dp"
        android:paddingBottom="18dp"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:textColor="@color/black"
            android:fontFamily="@font/dimbo"
            android:text="@string/bi_title"/>
        <Button
            android:id="@+id/indexViewAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:fontFamily="@font/dimbo"
            android:text="@string/bi_view_all_button"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:fontFamily="@font/dimbo"
            android:text="@string/bi_user_query_advice"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:fontFamily="@font/dimbo"
                android:text="@string/bi_player_lvl"/>
            <EditText
                android:id="@+id/battleIndexPlayerLevelEdit"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:textSize="12sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:fontFamily="@font/dimbo"
                android:text="@string/bi_enemy_lvl"/>
            <EditText
                android:id="@+id/battleIndexEnemyLevelEdit"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:textSize="12sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:fontFamily="@font/dimbo"
                android:text="@string/bi_battle_result"/>
            <EditText
                android:id="@+id/battleIndexResultEdit"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:textSize="12sp"/>
        </LinearLayout>

        <Button
            android:id="@+id/indexViewQuery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:fontFamily="@font/dimbo"
            android:text="@string/bi_view_query_subset"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="3"
        android:padding="18dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="8sp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginEnd="8sp"
                android:fontFamily="@font/dimbo"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:text="@string/bi_table_player_lvl"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginEnd="8sp"
                android:fontFamily="@font/dimbo"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:text="@string/bi_table_enemy_lvl"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_gravity="center"
                android:layout_marginEnd="8sp"
                android:fontFamily="@font/dimbo"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:text="@string/bi_table_result"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:layout_gravity="center"
                android:fontFamily="@font/dimbo"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:text="@string/bi_table_datetime"/>

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/battleIndexRecyclerView">
        </android.support.v7.widget.RecyclerView>

        <Button
            android:id="@+id/battleIndexBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:text="@string/prof_back"
            android:fontFamily="@font/dimbo"
            android:layout_gravity="end"/>

    </LinearLayout>


</LinearLayout>