<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@drawable/muted_bg"
    android:gravity="center"
    tools:context=".gameplay.inventoryPackage.InventoryActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="3"
        android:paddingTop="10dp"
        android:paddingBottom="18dp"
        android:paddingStart="18dp"
        android:paddingEnd="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:textColor="@color/black"
            android:paddingBottom="8dp"
            android:fontFamily="@font/dimbo"
            android:text="@string/inventory_title"/>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="4sp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/dimbo"
                android:layout_marginEnd="8sp"
                android:textSize="14sp"
                android:text="@string/items_image"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_gravity="center"
                android:fontFamily="@font/dimbo"
                android:layout_marginEnd="8sp"
                android:textSize="14sp"
                android:text="@string/items_name"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:fontFamily="@font/dimbo"
                android:layout_marginEnd="8sp"
                android:textSize="14sp"
                android:text="@string/items_mindmg"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:fontFamily="@font/dimbo"
                android:layout_marginEnd="8sp"
                android:textSize="14sp"
                android:text="@string/items_maxdmg"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:fontFamily="@font/dimbo"
                android:layout_marginEnd="8sp"
                android:textSize="14sp"
                android:text="@string/items_reload"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:fontFamily="@font/dimbo"
                android:layout_marginEnd="8sp"
                android:textSize="14sp"
                android:text="@string/inventory_equip"/>

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/inventoryRecyclerView">
        </android.support.v7.widget.RecyclerView>

    </LinearLayout>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:padding="18dp"
        android:layout_height="match_parent"
        android:gravity="end|bottom"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="4dp"
            android:fontFamily="@font/dimbo"
            android:textSize="16sp"
            android:text="@string/items_currently"/>
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/inventoryCurrCannon"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:fontFamily="@font/dimbo"
            android:layout_marginEnd="4dp"
            android:textSize="18sp"
            android:text=""
            android:id="@+id/inventoryCurrStats"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/dimbo"
            android:textSize="16sp"
            android:text="@string/items_coins"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="end"
            android:textColor="@color/black"
            android:fontFamily="@font/dimbo"
            android:layout_marginEnd="4dp"
            android:textSize="24sp"
            android:text=""
            android:id="@+id/inventoryCurrCoins"/>

        <Button
            android:id="@+id/inventoryBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:text="@string/prof_back"
            android:fontFamily="@font/dimbo"
            android:layout_gravity="end"/>

    </LinearLayout>

</LinearLayout>